# DoIt

./: .gitignore  Cargo.toml  Changelog.md  Makefile  README.md  Readme.md  insomnia.json  rustfmt.toml
app/: Cargo.toml
app/src/: main.rs
client/: Cargo.toml
client/src/: lib.rs
client/src/api/: mod.rs
client/src/api/delete_one/: view.rs
client/src/api/insert_one/: presenter.rs
client/src/api/read_all/: model.rs  view.rs
client/src/api/update_one/: model.rs  presenter.rs
client/static/: style.css
server/: Cargo.toml
server/src/: lib.rs
server/src/database/: mod.rs
server/src/database/delete_one/: model.rs  presenter.rs  view.rs
server/src/database/insert_one/: model.rs  presenter.rs  view.rs
server/src/database/read_all/: model.rs  presenter.rs  view.rs
server/src/database/update_one/: mod.rs  model.rs  presenter.rs  view.rs
server/src/database/update_one/description/: model.rs  view.rs
server/src/database/update_one/done/: model.rs  presenter.rs  view.rs
shared/: Cargo.toml
shared/src/: lib.rs  todo.rs  todo_insert.rs  todo_item.rs  todo_update.rs
static/: index.html  script.js  style.css
static/delete_todo/: index.js
static/last_todo/: index.js
static/modal/: index.js
static/post_todo/: index.js
static/render_list/: index.js
term/: Cargo.toml
termcli/: Cargo.toml
www/: Cargo.toml
www/src/: lib.rs
www/src/api/delete_one/: model.rs  presenter.rs
www/src/api/insert_one/: mod.rs  model.rs  view.rs
www/src/api/read_all/: presenter.rs
www/src/api/update_one/: model.rs  presenter.rs  view.rs
(+17 files in other folders)
