[package]
name = 'client'
version = '0.6.0'
authors = ['JADSN <jadsn1894@gmail.com>']
edition = '2018'

[dependencies]
tide = '0.12.0'
serde_json = '1.0.57'

[dependencies.async-std]
version = '1.6.2'

[dependencies.serde]
version = '1.0.114'
features = ['derive']

[dependencies.server]
path = '../server'

[dependencies.shared]
path = '../shared'
