[package]
name = 'server'
version = '0.7.0'
authors = ['JADSN <jadsn1894@gmail.com>']
edition = '2018'

[dependencies]
serde_json = '1.0.57'

[dependencies.rusqlite]
version = '0.23.1'
features = [
    'bundled',
    'serde_json',
]

[dependencies.serde]
version = '1.0.115'
features = ['derive']

[dependencies.shared]
path = '../shared'
